gameplay module refactor: - renamed few internal classes, - moved GameplayEventHandler to 'ports' package, - removed GameStateView from logic submodule, - inlined GameplayCreatorImpl